--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -71,7 +71,7 @@
                        placeholder="Enter a Business name">
               </div>
 
-              <div class="col-md-4 col-lg-3 col-xl-3">
+              <div class="col-md-3 col-lg-3 col-xl-3">
                 <label style="margin:0">Business Type*</label>
                 <select class="form-control" name="businessType" ng-init="businessType = businessType || businessTypes[0]"
                         ng-model="businessType" ng-options="businessType.name for businessType in businessTypes" id="businessType" required>
@@ -101,34 +101,43 @@
 <!--                <input type="text" id="autocomplete" name="location" ng-model="location" class="form-control"-->
 <!--                       ng-init="initialize" placeholder="Enter an address, city or zipcode">-->
 <!--              </div>-->
+                <div class="col-md-2 col-lg-2 col-xl-2">
+                    <label style="margin:0">State*</label>
+                    <select class="form-control" name="businessState" ng-model="businessState"
+                            ng-options="state.name for state in businessStates track by state.id"
+                            id="administrative_area_level_1" ng-change="getCounties()" required>
+                        <!--                  <option style="color:#868e96;" value="">Select a state</option>-->
+                    </select>
+                    <span style="color:red" ng-show="submitted && searchBusinessForm.businessState.$error.required">State is required.</span>
+                </div>
+
                 <div class="col-md-3 col-lg-2 col-xl-2">
-                    <label style="margin:0">City*</label>
-                    <select class="form-control" name="businessCity" ng-model="businessCity"
-                            ng-options="city as city.label for city in businessCities track by city.id"
-                            id="locality" required>
+                    <label style="margin:0">County*</label>
+                    <select class="form-control" name="businessCounty" ng-model="businessCounty"
+                            ng-options="county.countyName for county in businessCounties track by county.countyName"
+                            required>
                         <!--                  <option default selected style="color:#868e96;" value="">Select a city</option>-->
                     </select>
-                    <span style="color:red" ng-show="submitted && searchBusinessForm.businessCity.$error.required">City is required.</span>
+                    <span style="color:red" ng-show="submitted && searchBusinessForm.businessCounty.$error.required">County is required.</span>
                 </div>
 
 <!--            </div>-->
 <!--            <div class="row form-group justify-content-md-center">-->
 
-              <div class="col-md-2 col-lg-1 col-xl-1">
-                <label style="margin:0">State*</label>
-                <select class="form-control" name="businessState" ng-model="businessState"
-                        ng-options="state.label for state in businessStates track by state.id"
-                        id="administrative_area_level_1" required>
-<!--                  <option style="color:#868e96;" value="">Select a state</option>-->
-                </select>
-                <span style="color:red" ng-show="submitted && searchBusinessForm.businessState.$error.required">State is required.</span>
-              </div>
+                <div class="col-md-3 col-lg-2 col-xl-2">
+                    <label style="margin:0">Price Range</label>
+                    <select class="form-control" name="priceRange" ng-model="priceRange"
+                            ng-options="priceRange.price for priceRange in priceRangeList track by priceRange.id">
+                        <!--                  <option style="color:#868e96;" value="">Select a state</option>-->
+                    </select>
 
-              <div class="col-md-2 col-lg-1 col-xl-1">
-                <label style="margin:0">Zipcode</label>
-                <input type="text" id="postal_code" name="businessZipcode" ng-model="businessZipcode" class="form-control"
-                       placeholder="">
-              </div>
+                </div>
+
+<!--              <div class="col-md-2 col-lg-1 col-xl-1">-->
+<!--                <label style="margin:0">City</label>-->
+<!--                <input type="text" id="postal_code" name="businessCity" ng-model="businessCity" class="form-control"-->
+<!--                       placeholder="">-->
+<!--              </div>-->
                 <div class="col-md-5 col-lg-4 col-xl-4">
 <!--                    <label style="color:white;margin-top:30px">Show For Sell Business only</label>-->
                     <div class="checkbox checkbox-inline">
