Updated fonts and colors of text etc

--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -69,7 +69,7 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide" ng-repeat="image_prop in imageArray track by image_prop.imageId">
                                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                                            <img src={{image_prop.url}} class="img-fluid swiper-lazy" style="height:450px; width:1024px" alt="Drawing Room">
+                                            <img src={{image_prop.url}} class="img-fluid swiper-lazy" style="height:450px; width:1024px" alt="Sorry, no pictures available at this time.">
                                         </figure>
                                     </div>
                                 </div>
