--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -68,7 +68,7 @@
                             <a href="#businessDetails/{{prop.businessId}}">
                                 <div style="padding:5px;">
                                     <p class="item-price" ng-if="prop.isForSell === 'Y'">Asking Price ${{ prop.forSellPrice.toLocaleString('en', {useGrouping:true}) }}</p>
-                                    <p class="item-price">Click to find RealWorthTM & more details!!</p>
+                                    <p class="item-price" style="color:blue" style="font-family:ariel">See RealWorth&trade; & more details!</p>
 <!--                                    <p class="item-price" ng-if="prop.marketBasedEst">Market Estimated Price ${{ prop.marketBasedEst.toLocaleString('en', {useGrouping:true})}}</p>-->
 
 <!--                                    <p class="item-badge-right item-address">{{prop.type}}</p>-->
