--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -13,7 +13,7 @@
 /*    }*/
 
     .col-md-12.col-lg-12.col-xl-12.central-content{
-        background-color: rgba(0,0,0,.8);
+        background-color: rgba(0,0,0,.4);
         margin: 50px 0 50px 0;
         display: inline-block;
     }
@@ -22,8 +22,12 @@
         background-image: url("../img/home-pr-1.jpg");
         opacity: 0.8;
         background-size: cover;
-        min-height: 500px;
         padding: 20px 20px 20px 20px;
+    }
+
+    .carousel.main.v2, .carousel.main.v5{
+        background-color: #003d7d;
+        background-position: center;
     }
 
     .col-md-6, .col-lg-6, .col-xl-6 {
@@ -51,9 +55,9 @@
 /*}*/
 </style>
 <div class="home-search">
-<div class="main search-form v2">
-  <div class="container">
-    <div class="row justify-content-md-center">
+    <div class="main search-form v2">
+        <div class="container">
+            <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-12 col-xl-12 central-content">
         <div class="heading">
           <h2>Find <i>RealWorth</i><small>&trade;</small> of Business!</h2>
@@ -164,6 +168,104 @@
 
       </div>
     </div>
-  </div>
-</div>
+      </div>
+    </div>
+    <div class="main carousel v2">
+        <div class="row justify-content-md-center" style="padding:50px 120px 50px 120px;">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="10000">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-md-5 col-lg-5 col-xl-5">
+                                <img style="width:100%;height:300px;" src="../img/1.jpg" alt="First slide">
+                            </div>
+                            <div class="col-md-5 col-lg-5 col-xl-5">
+                                <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
+                                <p style="color:white;">
+                                    Have you considered selling a Southwest Florida company? Do you know how much it is worth? Selling a business you own is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is worth. It can...
+                                </p>
+                                <a href="#businessBuyGuidance" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-md-5 col-lg-5 col-xl-5">
+                                <img style="width:100%;height:300px;" src="../img/2.jpg" alt="First slide">
+                            </div>
+                            <div class="col-md-5 col-lg-5 col-xl-5">
+                                <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
+                                <p style="color:white;">
+                                    Have you considered selling a Southwest Florida company? Do you know how much it is worth? Selling a business you own is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is worth. It can...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-md-5 col-lg-5 col-xl-5">
+                                <img style="width:100%;height:300px;" src="../img/3.jpg" alt="First slide">
+                            </div>
+                            <div class="col-md-5 col-lg-5 col-xl-5">
+                                <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
+                                <p style="color:white;">
+                                    Have you considered selling a Southwest Florida company? Do you know how much it is worth? Selling a business you own is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is worth. It can...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br/>
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>s
+            </div>
+            <a class="carousel-control-prev" style="width:5%;" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" style="width:5%;" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <div class="row justify-content-md-center" style="padding:40px;">
+        <div class="central-content"
+             style="background-color:#eeeeeee3;margin:0px;display:block;">
+            <div class="heading">
+                <h5 style="color:black;padding:10px 50px 10px 50px;">
+                    Sign up for our newsletter and get business tips for success and industry news delivered straight to your inbox.
+                </h5>
+            </div>
+            <form name="subscribeBusiness" ng-controller="homeController" ng-submit="subscribeSubmitted = true" novalidate>
+                <div class="justify-content-md-center">
+                    <div class="row form-group justify-content-md-center" style="padding:10px 60px 10px 60px;">
+                        <div class="col-md-6 col-lg-4 col-xl-4">
+                            <div class="form-group">
+                                <input type="email" id="subscribeEmail" name="subscribeEmail" ng-model="subscribeEmail"
+                                       class="form-control" placeholder="Email" required>
+                                <div class="errors" ng-show="subscribeSubmitted || subscribeBusiness.subscribeEmail.$touched">
+                                    <div style="color:red" ng-show="subscribeBusiness.subscribeEmail.$error.required">E-mail is required.</div>
+                                    <div style="color:red" ng-show="subscribeBusiness.subscribeEmail.$error.email">Email is invalid.</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-1 col-lg-1 col-xl-1">
+                            <div class="form-group">
+                                <input type="submit" value="Subscribe" class="btn btn-md btn-primary"
+                                       style="background-color:#0a2e80;border-color:#0000005e;color:white;"
+                                       ng-click="subscribe(subscribeBusiness)">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
 </div>
