--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -22,6 +22,7 @@
         background-image: url("../img/home-pr-1.jpg");
         opacity: 0.8;
         background-size: cover;
+        min-height: 500px;
         padding: 20px 20px 20px 20px;
     }
 
@@ -178,7 +179,7 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-5 col-lg-5 col-xl-5">
-                                <img style="width:100%;height:300px;" src="../img/1.jpg" alt="First slide">
+                                <img style="width:100%;height:400px;" src="../img/1.jpg" alt="First slide">
                             </div>
                             <div class="col-md-5 col-lg-5 col-xl-5">
                                 <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
@@ -193,7 +194,7 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-5 col-lg-5 col-xl-5">
-                                <img style="width:100%;height:300px;" src="../img/2.jpg" alt="First slide">
+                                <img style="width:100%;height:400px;" src="../img/2.jpg" alt="First slide">
                             </div>
                             <div class="col-md-5 col-lg-5 col-xl-5">
                                 <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
@@ -206,7 +207,7 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-5 col-lg-5 col-xl-5">
-                                <img style="width:100%;height:300px;" src="../img/3.jpg" alt="First slide">
+                                <img style="width:100%;height:400px;" src="../img/3.jpg" alt="First slide">
                             </div>
                             <div class="col-md-5 col-lg-5 col-xl-5">
                                 <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
