Updated stealth mode language

--- a/src/main/resources/static/resources/pages/addListingForm.html
+++ b/src/main/resources/static/resources/pages/addListingForm.html
@@ -242,8 +242,8 @@
                 </div>
             </div>
             <div class="col-md-4 col-lg-4 col-xl-4">
-                <label data-toggle="tooltip" title="Business in stealth mode means we won't show name and address of your business anywhere on our site.">
-                    Do you want to list your business in stealth mode?</label><br/>
+                <label data-toggle="tooltip" title="Confidential Business Listing will not display name, address or any information that may reveal its identity.">
+                    Do you want to list your Business confidentially?</label><br/>
                 <div class="radio radio-inline">
                     <input type="radio" id="isHidden" ng-model="isHidden" value="Y">
                     <label for="isHidden">Yes</label>
