--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -15,9 +15,9 @@
     <div class="col-xs-12 col-sm-7 col-md-6 col-lg-5 col-xl-6">
         <div class="search-results">
             <div class="search-results-list">
-                <div style="color:red;">*Businesses in stealth mode are not marked on Map.
+                <div style="color:red;">*Confidential Businesses Listings are not marked on Map.
                     <i class="fa fa-info-circle" style="font-size:14px;" data-toggle="popover" data-trigger="hover"
-                       data-content="Business in stealth mode is confidential business and we don't disclose name and address of confidential business anywhere on our website."></i>
+                       data-content="Confidential Business Listing will not display name, address or any information that may reveal its identity."></i>
                 </div>
                 <div class="page-header">
                     <h1 ng-if="businessName">{{businessName}} near {{businessCity}}, {{businessState}}</h1>
