Show estimations on business details page whether business on sale or not

--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -91,7 +91,7 @@
                         <div id="sidebar">
                             <div>
                                 <div id="feature-list" role="tablist" class="row">
-                                    <div class="col-lg-6 col-xl-6" ng-if="businessDetails.isForSell === 'Y'">
+                                    <div class="col-lg-6 col-xl-6">
                                         <div class="card shadow">
                                             <div class="card-header" role="tab" ng-if="businessDetails.isForSell === 'Y'">
                                                 <h4 class="panel-title">For sale</h4>
