1. Removed bookmark star from business listing page 2. Call google apis for latitude and longitude for 10 businesses only 3. Business description on details page renders based on html tags

--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -251,7 +251,7 @@
                     <div>
                         <h3 class="headline" ng-if="businessDetails.description">Business description</h3>
                         <div class="row" style="margin:10px" ng-if="businessDetails.description">
-                            <p style="margin-bottom: 0">{{businessDetails.description}}</p>
+                            <p ng-bind-html="businessDetails.description"></p>
                         </div>
 
                         <h3 class="headline" ng-if="businessCommonFeatures" >Business Details</h3>
