--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -53,7 +53,7 @@
                                         <img src="../../img/icon/red_marker.svg" style="width:20px;height:20px"/>
                                         <span>For Sale</span>
                                     </div>
-                                    <a class="save-item" ng-class="{'save-item-active': prop.isBookMarked}" ng-click="bookMarked(prop, $index)"><i class="fa fa-star"></i></a>
+<!--                                    <a class="save-item" ng-class="{'save-item-active': prop.isBookMarked}" ng-click="bookMarked(prop, $index)"><i class="fa fa-star"></i></a>-->
                                     <div class="item-badge-left save-item-bottom-left" ng-if="prop.name">
                                         <span>{{prop.name}}</span>
                                         <div ng-if="prop.isHidden === 'N' && (prop.street1 || prop.city)">
