--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -265,7 +265,7 @@
 <!--            async defer></script>-->
 
 <script src="https://code.angularjs.org/1.2.13/angular.js"></script>
-
+<script data-require="angular-sanitize@*" data-semver="1.2.13" src="https://code.angularjs.org/1.2.13/angular-sanitize.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
 <!-- amazon javascript sdk cdn file -->
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.24.min.js"></script>
